<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.ContentFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lamkastudios.pizzeria.ActivityIngredientes">

    <ImageView
        android:id="@+id/fondo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.7"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/pizzafondo" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/txtMasa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="casual"
            android:text="@string/txtMasa"
            android:textColor="@color/colorTexto"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtMasa2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="casual"
            android:text="@string/txtIngredientes"
            android:textColor="@color/colorTexto"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/scrollIngredientes"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/txtMasa3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:fontFamily="casual"
            android:text="@string/txtPrecio"
            android:textColor="@color/colorTexto"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scrollIngredientes" />

        <TextView
            android:id="@+id/txtMasa4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="casual"
            android:text="@string/nombre"
            android:textColor="@color/colorTexto"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtMasa" />

        <TextView
            android:id="@+id/txtPrecio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:fontFamily="casual"
            android:text="120"
            android:textColor="@color/colorTexto"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/txtMasa3"
            app:layout_constraintTop_toBottomOf="@+id/scrollIngredientes" />

        <TextView
            android:id="@+id/txtMasa5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:fontFamily="casual"
            android:text="@string/moneda"
            android:textColor="@color/colorTexto"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/txtPrecio"
            app:layout_constraintTop_toBottomOf="@+id/scrollIngredientes" />

        <Spinner
            android:id="@+id/spinnerMasa"
            style="@style/Widget.AppCompat.Spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:spinnerMode="dialog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.51"
            app:layout_constraintStart_toEndOf="@+id/txtMasa"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:id="@+id/scrollIngredientes"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="168dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/linearIngredientes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/chkCebolla"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="casual"
                    android:text="@string/cebolla"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/chkCarne"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="casual"
                    android:text="@string/carne"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/chkSalchicha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="casual"
                    android:text="@string/salchicha"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/chkPimiento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="casual"
                    android:text="@string/pimiento"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/chkPepperoni"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="casual"
                    android:text="@string/pepperoni"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/chk4Quesos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="casual"
                    android:text="@string/quesos"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/chkQuesoCabra"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="casual"
                    android:text="@string/quesocabra"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/chkChorizo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="casual"
                    android:text="@string/chorizo"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/chkChampi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="casual"
                    android:text="@string/champi"
                    android:textStyle="bold" />
            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/btnConfirmar"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="56dp"
            android:layout_marginEnd="8dp"
            android:text="@string/btnConfirmar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btnVolver"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="56dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/btnVolver"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnAñadirPizza"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:drawableLeft="@drawable/plus"
            android:text="@string/btnAñadir"
            app:layout_constraintBottom_toTopOf="@+id/btnVolver"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtMasa3" />

        <EditText
            android:id="@+id/cajaNombre"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:fontFamily="casual"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColor="@color/colorTexto"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txtMasa4"
            app:layout_constraintTop_toBottomOf="@+id/txtMasa" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.ContentFrameLayout>
